# PC-Tracker

./: README.md  README_zh.md  capturer.py  fs.py  main.py  monitor.py  package.ps1  pyproject.toml  recorder.py  task.py  task_cnt.json  tasks.json  tracker.py  utils.py
docs/: README.md
