[project]
name = "pc-agent-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.19.0",
    "pynput>=1.8.1",
    "pywin32>=311",
    "pywin32-ctypes>=0.2.3",
    "pywinauto>=0.6.9",
]
